--- a/oauth/Gopkg.toml
+++ b/oauth/Gopkg.toml
@@ -30,8 +30,8 @@
   name = "github.com/mercadolibre/golang-restclient"
 
 [[constraint]]
-  branch = "master"
   name = "github.com/mfirmanakbar/bookstore_utils-go"
+  version = "1.1.0"
 
 [prune]
   go-tests = true
